<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_from_image</name>
  <version>0.0.0</version>
  <description>A ROS package, which gets real world lane coordinates with only image, camera calibration and position info.</description>
  <maintainer email="catundertheleaf@gmail.com">Stacy</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/CatUnderTheLeaf/path_from_image.git</url>

  <build_depend>rclpy</build_depend>
  <build_depend>python3-opencv</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
