<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>path_from_image</name>
  <version>0.0.0</version>
  <description>A ROS package, which gets real world lane coordinates with only image, camera calibration and position info.</description>
  <maintainer email="catundertheleaf@gmail.com">Stacy</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/CatUnderTheLeaf/path_from_image.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
</package>
